# easy_arxiv

./: AGENTS.md  CLAUDE.md  README.md  arxiv-coffee  config.toml.example  interests.md.example  main.py  pyproject.toml
.opencode/plans/: implement.md  implement_latex.md  implement_render_latex.md  latex.md
src/arxiv_coffe/: app.py  arxiv_client.py  config.py  library.py  llm.py  models.py  pdf_extractor.py
src/arxiv_coffe/screens/: feed.py  library_screen.py  settings.py
src/arxiv_coffee/: app.py  arxiv_client.py  claude_agent_sdk.py  cli.py  config.py  copilot_auth.py  html_export.py  integrations.py  latex.py  latex_render.py  library.py  llm.py  markdown.py  models.py  pdf_extractor.py  summarize_pipeline.py  terminal_caps.py
src/arxiv_coffee/screens/: copilot_auth.py  feed.py  library_screen.py  settings.py  summary.py
src/arxiv_coffee/widgets/: __init__.py  dual_progress.py
