[project]
name = "arxiv-coffee"
version = "0.1.0"
description = "A TUI tool to browse, filter, and summarize arXiv papers using AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "textual>=1.0.0",
  "arxiv>=2.1.0",
  "pymupdf>=1.24.0",
  "litellm>=1.40.0",
  "tomli-w>=1.0.0",
  "httpx>=0.27.0",
  "pylatexenc>=2.10",
  "unicodeit>=0.7.5",
  "mdit-py-plugins>=0.4.0",
  "typer>=0.9.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
graphics = [
    "textual-image>=0.8.5",
]

[project.scripts]
arxiv-coffee = "arxiv_coffee.cli:runCli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_coffee"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
